src/assets/stylesheets/footer.css
.footer {
  background-color: #2c4860;
  padding: 0 1%;

  &::after {
    content: '';
    position: absolute;
    top: -3px;
    left: 0;
    width: 100%;
    height: 6px;

    background-color: #2c4860;
  }
}

.sidebar-opened + .footer {
  .copyright {
    text-align: right;
    padding-right: 15px;
  }
}

/*.footer.greeting {
  display: none;
}*/

.footer-navigation {
  padding-top: 15px;
  flex-direction: row;
  justify-content: flex-end;
  align-items: center;
  flex-grow: 1;
  z-index: 6;
}

.social {
  flex-direction: row;
}

.social-link {
  min-width: 50px;
  max-width: 75px;
  padding-right: 25px;

  section {
    max-height: 75px;
  }
}

.social-link svg {
  width: 100%;
}

.social-link svg path {
  fill: #3D6687;
}

.social-link:hover svg path {
  fill: #6DCDE9;
}

.sitemap {
  flex-direction: row;
  align-items: center;
  padding: 0 25px;
}

.sitemap h3 {
  padding: 0 0 10px 0;
  color: #6DCDE9;
}

.sitemap h3::before {
  content: '';
  position: absolute;
  bottom: 0;
  right: 0;
  width: 50%;
  height: 10px;
  background: #6DCDE9;
}

.sitemap-group {
  padding-top: 5px;
}

.sitemap-link {
  padding-left: 25px;
  font-size: 22px;
  color: #3D6687;
  text-transform: uppercase;
  text-decoration: none;
}

.sitemap-link:hover {
  color: #6DCDE9;
}

.copyright,
.copyright a {
  line-height: 2.5em;
  text-transform: uppercase;
  text-align: center;
  font-size: 14px;
  color: #3D6687;
}

.copyright {
  z-index: 6;

  .help-links {
    padding: 0 10px;

    a {
      text-decoration: underline;
      cursor: pointer;
    }
  }
}

@media only screen and (max-width: 768px) {
  .footer {
    padding: 0 5%;

    .footer-navigation {
      flex-direction: column-reverse;
      flex: initial;
      padding: 0;
    }

    .sitemap {
      flex-direction: column;
      align-items: flex-start;
      padding: 5px 0;
    }

    .sitemap h3 {
      font-size: 1.5em;
      padding: 0;
    }

    .sitemap h3::before {
      bottom: -5px;
    }

    .sitemap-group {
      padding: 0;
    }

    .sitemap-link {
      padding: 0 0 3px;
    }

    .social {
      padding: 3% 0 0;
    }

    .social-link {
      padding: 0 10px;
    }

    .copyright {
      padding-top: 10px;
      line-height: 1em;

      .help-links,
      .legit-name {
        display: flex;
        align-items: center;
        justify-content: center;
        text-align: center;
      }
    }
  }
}

@media only screen and (max-width: 568px) {
  .footer {
    box-shadow: 0 0 50px rgba(0, 0, 0, 0.3);

    &::after {
      display: none;
    }
  }
}

